Revert "OAK-11834 - Cleanups to reduce changeset in OAK-11814  (#2411)"
This reverts commit 388e9d8b57bf20e33a2eb303a6c3fadda18e5bd7.